# multilingua-ocr

./: .gitignore  Generate sample test documents  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
configs/: default_config.yaml  evaluation_config.yaml  training_config.yaml
docker/: Dockerfile  docker-compose.yml  requirements.txt
docs/: mkdocs.yml
docs/api/: core.md  models.md  preprocessing.md
docs/cultural/: guidelines.md  ontology.md
docs/guides/: evaluation.md  installation.md  model_training.md  quickstart.md
multilingua_ocr/core/: __init__.py  config.py  utils.py
multilingua_ocr/data/: __init__.py  augmentation.py  dataset.py  preprocessing.py
multilingua_ocr/evaluation/: __init__.py  metrics.py  visualization.py
multilingua_ocr/models/: __init__.py  attention.py  cultural_mapping.py  decoder.py  encoder.py
multilingua_ocr/scripts/: evaluate.py  preprocess.py  train.py
multilingua_ocr/training/: __init__.py  losses.py  trainer.py
notebooks/: data_exploration.ipynb  model_analysis.ipynb  results_visualization.ipynb
scripts/: evaluate.sh  setup.sh  train.sh
tests/: __init__.py  test_evaluation.py  test_models.py  test_preprocessing.py
